Revert "fix: toolbar/outline visibility for nested group fields"
This reverts commit f5c084438f647b8d05578eace66e4c455bb9a966.

--- a/assets/sass/editor/_field.scss
+++ b/assets/sass/editor/_field.scss
@@ -25,7 +25,7 @@
 
 	&--active {
 		--outline: var(--color-primary);
-		outline: 1px solid var(--color-primary) !important;
+		outline: 1px solid var(--color-primary);
 		z-index: 2;
 	}
 
